# Optikos

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
res/shaders/: VKshader.frag  VKshader.vert  shader.wgsl
src/: optikos.cpp  optikos.hpp
src/platform/: IWindow.hpp
src/platform/glfw/: GLFWWindow.cpp  GLFWWindow.hpp
src/render/: IRenderer.hpp
src/render/opengl/: OpenGLRenderer.cpp  OpenGLRenderer.hpp
src/render/vulkan/: VulkanConfig.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp
src/render/webgpu/: WebGPURenderer.cpp  WebGPURenderer.hpp
src/shader/: IShader.hpp
src/shader/SPIRV/: VkShader.cpp  VkShader.hpp
src/shader/WGSL/: WGSLShader.cpp  WGSLShader.hpp
src/ui/: IWidget.hpp
src/ui/sdk/: button.cpp
